--- a/FarmLandServeur/serveur.ui
+++ b/FarmLandServeur/serveur.ui
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>FenetreJeu</class>
- <widget class="QWidget" name="FenetreJeu">
+ <class>Serveur</class>
+ <widget class="QWidget" name="Serveur">
   <property name="geometry">
    <rect>
     <x>0</x>
@@ -11,7 +11,7 @@
    </rect>
   </property>
   <property name="windowTitle">
-   <string>FenetreJeu</string>
+   <string>Serveur</string>
   </property>
  </widget>
  <resources/>
