--- a/Client_Donjons/clientcrawler.ui
+++ b/Client_Donjons/clientcrawler.ui
@@ -13,7 +13,7 @@
   <property name="windowTitle">
    <string>ClientCrawler</string>
   </property>
-  <widget class="QWidget" name="">
+  <widget class="QWidget" name="layoutWidget">
    <property name="geometry">
     <rect>
      <x>50</x>
@@ -81,6 +81,22 @@
      </layout>
     </item>
    </layout>
+  </widget>
+  <widget class="QGraphicsView" name="vue">
+   <property name="geometry">
+    <rect>
+     <x>10</x>
+     <y>20</y>
+     <width>531</width>
+     <height>431</height>
+    </rect>
+   </property>
+   <property name="verticalScrollBarPolicy">
+    <enum>Qt::ScrollBarAlwaysOff</enum>
+   </property>
+   <property name="horizontalScrollBarPolicy">
+    <enum>Qt::ScrollBarAlwaysOff</enum>
+   </property>
   </widget>
  </widget>
  <resources/>
