--- a/FarmLand/fenetrejeu.ui
+++ b/FarmLand/fenetrejeu.ui
@@ -6,9 +6,21 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>800</width>
+    <width>860</width>
     <height>600</height>
    </rect>
+  </property>
+  <property name="minimumSize">
+   <size>
+    <width>860</width>
+    <height>600</height>
+   </size>
+  </property>
+  <property name="maximumSize">
+   <size>
+    <width>860</width>
+    <height>600</height>
+   </size>
   </property>
   <property name="windowTitle">
    <string>FenetreJeu</string>
@@ -16,41 +28,21 @@
   <widget class="QPushButton" name="pushButtonNouvelleZone">
    <property name="geometry">
     <rect>
-     <x>640</x>
-     <y>380</y>
-     <width>31</width>
-     <height>31</height>
+     <x>380</x>
+     <y>500</y>
+     <width>51</width>
+     <height>41</height>
     </rect>
    </property>
    <property name="text">
     <string/>
    </property>
   </widget>
-  <widget class="QGraphicsView" name="graphicsView">
-   <property name="geometry">
-    <rect>
-     <x>40</x>
-     <y>30</y>
-     <width>291</width>
-     <height>211</height>
-    </rect>
-   </property>
-  </widget>
-  <widget class="QGraphicsView" name="graphicsView_2">
-   <property name="geometry">
-    <rect>
-     <x>40</x>
-     <y>260</y>
-     <width>291</width>
-     <height>211</height>
-    </rect>
-   </property>
-  </widget>
   <widget class="QPushButton" name="pushButton_2">
    <property name="geometry">
     <rect>
-     <x>410</x>
-     <y>480</y>
+     <x>360</x>
+     <y>560</y>
      <width>80</width>
      <height>23</height>
     </rect>
@@ -62,8 +54,8 @@
   <widget class="QLabel" name="labelNouvelleZone">
    <property name="geometry">
     <rect>
-     <x>400</x>
-     <y>410</y>
+     <x>450</x>
+     <y>500</y>
      <width>271</width>
      <height>61</height>
     </rect>
@@ -72,11 +64,11 @@
     <string/>
    </property>
   </widget>
-  <widget class="QWidget" name="">
+  <widget class="QWidget" name="layoutWidget">
    <property name="geometry">
     <rect>
-     <x>90</x>
-     <y>510</y>
+     <x>130</x>
+     <y>490</y>
      <width>195</width>
      <height>79</height>
     </rect>
@@ -133,6 +125,19 @@
      </widget>
     </item>
    </layout>
+  </widget>
+  <widget class="QLineEdit" name="lineEditPrenom">
+   <property name="geometry">
+    <rect>
+     <x>10</x>
+     <y>530</y>
+     <width>113</width>
+     <height>22</height>
+    </rect>
+   </property>
+   <property name="placeholderText">
+    <string>Prénom</string>
+   </property>
   </widget>
  </widget>
  <resources/>
