--- a/FarmLand/fenetrejeu.ui
+++ b/FarmLand/fenetrejeu.ui
@@ -28,8 +28,8 @@
   <widget class="QPushButton" name="pushButtonNouvelleZone">
    <property name="geometry">
     <rect>
-     <x>380</x>
-     <y>500</y>
+     <x>340</x>
+     <y>490</y>
      <width>51</width>
      <height>41</height>
     </rect>
@@ -41,8 +41,8 @@
   <widget class="QPushButton" name="pushButton_2">
    <property name="geometry">
     <rect>
-     <x>360</x>
-     <y>560</y>
+     <x>190</x>
+     <y>570</y>
      <width>80</width>
      <height>23</height>
     </rect>
@@ -54,8 +54,8 @@
   <widget class="QLabel" name="labelNouvelleZone">
    <property name="geometry">
     <rect>
-     <x>470</x>
-     <y>520</y>
+     <x>500</x>
+     <y>530</y>
      <width>271</width>
      <height>61</height>
     </rect>
@@ -142,10 +142,10 @@
   <widget class="QLabel" name="labelBle">
    <property name="geometry">
     <rect>
-     <x>460</x>
-     <y>500</y>
-     <width>31</width>
-     <height>31</height>
+     <x>430</x>
+     <y>490</y>
+     <width>51</width>
+     <height>51</height>
     </rect>
    </property>
    <property name="text">
@@ -155,10 +155,10 @@
   <widget class="QLabel" name="labelCarotte">
    <property name="geometry">
     <rect>
-     <x>520</x>
-     <y>510</y>
-     <width>58</width>
-     <height>15</height>
+     <x>610</x>
+     <y>550</y>
+     <width>61</width>
+     <height>31</height>
     </rect>
    </property>
    <property name="text">
@@ -168,10 +168,10 @@
   <widget class="QLabel" name="labelRoche">
    <property name="geometry">
     <rect>
-     <x>590</x>
-     <y>510</y>
+     <x>610</x>
+     <y>500</y>
      <width>58</width>
-     <height>15</height>
+     <height>31</height>
     </rect>
    </property>
    <property name="text">
@@ -181,10 +181,10 @@
   <widget class="QLabel" name="labelFer">
    <property name="geometry">
     <rect>
-     <x>730</x>
-     <y>510</y>
+     <x>780</x>
+     <y>500</y>
      <width>58</width>
-     <height>15</height>
+     <height>31</height>
     </rect>
    </property>
    <property name="text">
@@ -194,10 +194,10 @@
   <widget class="QLabel" name="labelBouleau">
    <property name="geometry">
     <rect>
-     <x>660</x>
+     <x>700</x>
      <y>550</y>
      <width>58</width>
-     <height>15</height>
+     <height>31</height>
     </rect>
    </property>
    <property name="text">
@@ -207,10 +207,10 @@
   <widget class="QLabel" name="labelSapin">
    <property name="geometry">
     <rect>
-     <x>590</x>
-     <y>550</y>
+     <x>520</x>
+     <y>500</y>
      <width>58</width>
-     <height>15</height>
+     <height>31</height>
     </rect>
    </property>
    <property name="text">
@@ -223,7 +223,7 @@
      <x>520</x>
      <y>550</y>
      <width>58</width>
-     <height>15</height>
+     <height>31</height>
     </rect>
    </property>
    <property name="text">
@@ -233,10 +233,10 @@
   <widget class="QLabel" name="labelPatate">
    <property name="geometry">
     <rect>
-     <x>460</x>
+     <x>430</x>
      <y>550</y>
      <width>58</width>
-     <height>15</height>
+     <height>31</height>
     </rect>
    </property>
    <property name="text">
@@ -246,14 +246,131 @@
   <widget class="QLabel" name="labelChene">
    <property name="geometry">
     <rect>
-     <x>660</x>
-     <y>510</y>
+     <x>700</x>
+     <y>500</y>
      <width>58</width>
-     <height>15</height>
+     <height>31</height>
     </rect>
    </property>
    <property name="text">
     <string>Chene</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label">
+   <property name="geometry">
+    <rect>
+     <x>470</x>
+     <y>490</y>
+     <width>51</width>
+     <height>61</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>1000</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_2">
+   <property name="geometry">
+    <rect>
+     <x>470</x>
+     <y>540</y>
+     <width>51</width>
+     <height>61</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>50</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_3">
+   <property name="geometry">
+    <rect>
+     <x>820</x>
+     <y>490</y>
+     <width>51</width>
+     <height>61</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>50</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_4">
+   <property name="geometry">
+    <rect>
+     <x>560</x>
+     <y>540</y>
+     <width>51</width>
+     <height>61</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>50</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_5">
+   <property name="geometry">
+    <rect>
+     <x>560</x>
+     <y>490</y>
+     <width>51</width>
+     <height>61</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>50</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_6">
+   <property name="geometry">
+    <rect>
+     <x>650</x>
+     <y>540</y>
+     <width>51</width>
+     <height>61</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>50</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_7">
+   <property name="geometry">
+    <rect>
+     <x>650</x>
+     <y>490</y>
+     <width>51</width>
+     <height>61</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>50</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_8">
+   <property name="geometry">
+    <rect>
+     <x>740</x>
+     <y>490</y>
+     <width>51</width>
+     <height>61</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>50</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_9">
+   <property name="geometry">
+    <rect>
+     <x>740</x>
+     <y>540</y>
+     <width>51</width>
+     <height>61</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>50</string>
    </property>
   </widget>
  </widget>
